# code-snippets

./: .gitignore  README.md
bash/wildcards/: wildcard.sh
c/primitive-lengths/: main.c
cmake/basic/: CMakeLists.txt
cmake/basic/speaker/: CMakeLists.txt  shout.c
cmake/basic/speaker/include/: shout.h
docker/: entrypoint.sh  ubuntu.dock
docker/dockerignore/: Dockerfile  README.md
docker/entrypoint-meddling/: Dockerfile  entrypoint.sh
java-generics/: generics.java
linux/driver/: .gitignore
linux/driver/hello_world/: Makefile  hello_world.c
linux/driver/rng/: Makefile  cpdrng.c  rng.c
linux/driver/rng/test/: .gitignore  Makefile  test_cpdrng.c
musl/: config.mak
python/line-wrapping/: hello.py  runhello.sh
python/relative_imports/: parent.py
python/relative_imports/child_processes/: first_child.py  python.sh  second_child.py
python/relative_imports/subpackage/: module_a.py
python/subprocess/: sub.py
python/waiter/: waiter.py
